# crema-api

./: .dockerignore  .gitignore  Dockerfile  crema-api.md  crema-db-schema.md  main.py  pyproject.toml
app/: config.py  deps.py  main.py
app/db/: client.py
app/models/: beans.py  shots.py
app/routers/: beans.py  shots.py
tests/: conftest.py  test_auth.py  test_beans.py  test_shots.py
